Fixed spacing on paragraph fields

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -24,7 +24,7 @@
 	background-color: #ffe3a0
 }
 
-p {
+#aboutParagraph {
 	margin-left: 40px;
 	margin-bottom: 30px
 }
